--- a/index.css
+++ b/index.css
@@ -253,7 +253,7 @@ ul,li{
     width: 1520px;
     background-color: rgb(219, 221, 221);
 }
-.dharvi{
+.document{
     margin-top: 30px;
     margin-left: 700px;
     color: rgb(31, 174, 174);
